@@ -32,6 +32,7 @@
 #include <assert.h>
 #include <errno.h>
 #include <glib.h>
+#include <stddef.h>
 #include <stdio.h>
 #include <stdlib.h>
 
